syntax = "proto3";

package chatroom;

service ChatRoom {
    // Chat is bidirectional streaming method
    rpc Chat (stream Message) returns (stream Message) {
    }

    // Tell is just send sth. out
    rpc Tell (Message) returns (Empty) {
    }

}

message User {
    int64 id = 1;
    string nickname = 2;
}

message Message {
    int64 id = 1;
    int64 group_id = 2;
    int64 sender = 3;
    string content = 4;
    int32 type = 5;
    int64 send_time = 6;
}

message Empty {

}

message Group {
    int64 id = 1;
    string name = 2;
    repeated int64 members = 3;
}